add changes and bug fixes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
     </div>
-    <footer>Feito com ♥ por <a href="#">Santiago</a></footer>
+    <footer>Feito com ♥ por <a href="#">Santiago(Dev)</a></footer>
   </div>
 
    <script
