:data: ready for hosting

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Links</title>
+  <title>Links de Vandesson Santiago</title>
 
   <link rel="stylesheet" href="style.css">
 
@@ -31,37 +31,39 @@
     <div>
       <ul>
         <li>
-          <a href="#" target="_blank">Link 1</a>
+          <a href="#" target="_blank">Portifólio</a>
         </li>
         <li>
-          <a href="#" target="_blank">Link 2</a>
+          <a href="#" target="_blank">Ezdk Coworking</a>
         </li>
         <li>
-          <a href="#" target="_blank">Link 3</a>
+          <a href="#" target="_blank">Santiago Advocacia</a>
         </li>
+        <!--
         <li>
           <a href="#" target="_blank">Link 4</a>
         </li>
+      -->
       </ul>
     </div>
     <div id="social-links">
-      <a href="#" target="_blank">
+      <a href="https://github.com/vandessonsantiago" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="#" target="_blank">
+        <a href="https://www.instagram.com/vandessonsantiago/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-
+<!--   
         <a href="#" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
-
-        <a href="#" target="_blank">
+-->
+        <a href="https://www.linkedin.com/in/vandesson-santiago-95780b79/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
     </div>
-    <footer>Feito com ♥ por <a href="#">Santiago(Dev)</a></footer>
+    <footer>Feito com ♥ por <a href="#">Santiago(Dev🧙🏽‍♂️)</a></footer>
   </div>
 
    <script
