--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link id="favicon" rel="shortcut icon" href="./assets/favicon-dark.ico" type="image/x-icon" />
 
   <title>Links de Vandesson Santiago</title>
 
